Introduce inventory team code, debug inventory code, debug plan experiment code. PlanExperiment@Main does not complete because inventory doesn't contain the sample required to complete the experiment